# repo-ingestion-agent

./: .gitignore  DOCKERFILE  README.md  alerts.yml  dashboard.json  docker-compose.yml  pyproject.toml  pytest.ini  repo_ingestion.db-shm  repo_ingestion.db-wal  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: chunker.py  clone.py  config.py  database.py  logging_config.py  main.py  main_old.py  metrics.py  models.py  publisher.py
app/templates/: index.html
loadtests/: locustfile.py
tests/: conftest.py  e2e_deep_ml_test.sh  e2e_test.sh  fetch_logs.sh  test_api.py  test_chunker.py  test_clone.py  test_models_and_api.py  test_outbox.py  test_publisher.py
