[tool.poetry]
name = "neurxai-labs-repo-ingestion-agent"
version = "0.1.0"
description = "A repository ingestion agent for NeurX AI Labs."
authors = ["pandeyvishal.mlprof@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
python-dotenv = "^0.20.0"
requests = "^2.28.1"
GitPython = "^3.1.27"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"