[tool.poetry]
name = "neurxai-labs-repo-ingestion-agent"
version = "0.1.0"
description = "A repository ingestion agent for NeurX AI Labs."
authors = ["pandeyvishal.mlprof@gmail.com"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
GitPython = "^3.1.32"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python-json-logger = "^2.0.7"
httpx = "^0.25.0"
sqlalchemy = "^2.0.22"
pika = "^1.3.2"
prometheus-client = "^0.17.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"